2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c: Fix incorrect handling of special volumes.

2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Add ability to generate newc additions on runtime.

2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/coreboot/cbls.c: Fix typos and wrong
	description.

2013-03-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerate.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (hashes): Add several hashes
	from the spec.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Slight improve in USB-related boot-time checkpoints.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/boottime.c: Fix copyright header.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	New commands cbmemc, lscoreboot, coreboot_boottime to inspect
	coreboot tables content. Support for cbmemc.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix a conflict between ports structures with 2 controllers of
	same kind.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/boottime.h: Add missing file.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Initialize USB ports in parallel to speed-up boot.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix USB devices not being detected when requested
	due to delayed attach.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement boot time analysis framework.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove get_endpoint_descriptor and change all functions needing
	descriptor to just receive it as argument rather than endpoint
	address.

2013-03-19  Aleš Nesrsta  <starous@volny.cz>

	Better estimate the maximum USB transfer size.

2013-03-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Resend a packet if we got the wrong buffer in status.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>
